# RDPea

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build-alpha.yml  build-beta.yml  build.yml
.windsurf/workflows/: release-process.md
docs/: AZURE_SIGNING_SETUP.md  WEBSITE_HANDOFF.md
electron/: main.ts  preload.ts
electron/rdp/: audio.ts  bitmap.ts  bufferReader.ts  bufferWriter.ts  client.ts  clipboard.ts  index.ts  input.ts  ntlm.ts  protocol.ts  security.ts  transport.ts  types.ts
packaging/: README.md
packaging/chocolatey/: rdpea.nuspec
packaging/homebrew/: rdpea.rb
packaging/snap/: snapcraft.yaml
packaging/winget/: bluewhackadoo.RDPea.yaml
rdpea-bin/: update-package-manifests.ps1
rdpea-tauri/: .gitignore  AGENT_COORDINATION.md  AGENT_TASKS.md  HANDOFF_TO_DEVIN.md  PROGRESS.md  QUICKSTART.md  RDP_ROADMAP.md  README.md  SETUP.md  package.json  update-imports.ps1
rdpea-tauri/src-tauri/: Cargo.toml  tauri.conf.json
rdpea-tauri/src-tauri/capabilities/: default.json
rdpea-tauri/src-tauri/icons/: icon.icns
rdpea-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  storage.rs
rdpea-tauri/src-tauri/src/rdp/: audio.rs  bitmap.rs  buffer.rs  client.rs  clipboard.rs  connection.rs  gcc.rs  input.rs  mcs.rs  mod.rs  ntlm.rs  protocol.rs  security.rs  tests.rs  transport.rs  types.rs
scripts/: azure-sign.js  svg-to-icon.js  test-azure-auth.ps1  test-azure-sign.js  test-sign-direct.ps1  test-signing-setup.ps1
src/: App.tsx  index.css  types.ts
(+23 files in other folders)
