[package]
name = "rdpea-tauri"
version = "1.2.0-alpha.0"
description = "Lightweight RDP Remote Desktop Client"
authors = ["bluewhackadoo"]
edition = "2021"

[lib]
name = "rdpea_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
aes-gcm = "0.10"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
md4 = "0.10"
hmac = "0.12"
rc4 = "0.1"
rand = "0.8"
num-bigint = "0.4"
byteorder = "1"
arboard = "3"
dirs = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
hex = "0.4"
